--- a/Styles/header.css
+++ b/Styles/header.css
@@ -18,19 +18,40 @@ header
     background-color: #003B95;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-direction: row;
 }
 
 .navBar
 {
-    width: 71vw;
-    height: 5vw;
+    width: 100vw;
+    height: 20vw;
     position: absolute;
     top: 0vw;
     display: flex;
     align-items: center;
+    flex-direction: column;
+    padding: 0 3vw;
+}
+
+.firstNav
+{
+    width: 77vw;
+    height: 5vw;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 3vw;
+    padding: 0 3vw;
+}
+
+.subNav
+{
+    width: 71vw;
+    height: 4vw;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .logo
@@ -46,26 +67,47 @@ header
 .accAndOther
 {
     width: 25vw;
-    height: 3.2vw;
+    height: 4vw;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.burgerButton
+.Button
 {
     padding: 1vw;
-    font-size: 2vw;
+    font-size: 3.5vw;
     color: #fff;
     font-weight: 600;
     border-radius: 0.3vw;
     transition: all 0.2s ease-out;
+    margin: 0 0.8vw;
+    height: 5vw;
+    /* width: 4vw; */ 
 }
 
-.burgerButton:hover
+.Button:hover
 {
     background-color: #ffffff57;
     border-radius: 0.7vw;
+}
+
+
+.navButton
+{
+    padding: 1vw;
+    width: fit-content;
+    height: 5vw;
+    font-size: 1vw;
+    color: #fff;
+    border: 1px solid white;
+    border-radius: 3vw;
+    background-color: #ffffff23;
+    margin: 2vw 0.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* display: inline-block; */
 }
 
 @media (max-width: 768px)
@@ -77,8 +119,22 @@ header
     .navBar
     {
         width: 100vw;
-        height: 4vw;
-        padding: 3vw;
+        height: 20vw;
+    }
+
+    .firstNav
+    {
+        width: 100vw;
+        justify-content: space-between;
+        height: 8vw;
+        margin: 0 0 2vw 0;
+    }
+
+    .subNav
+    {
+        font-size: 2.5vw;
+        width: 100vw;
+        height: 3vw;
     }
 
     .logo
@@ -89,5 +145,10 @@ header
     .burgerButton
     {
         font-size: 3vw;
+    }
+
+    .navButton
+    {
+        font-size: 20px;
     }
 }
