--- a/Styles/header.css
+++ b/Styles/header.css
@@ -78,12 +78,11 @@ header
     padding: 1vw;
     font-size: 3.5vw;
     color: #fff;
-    font-weight: 600;
+    font-weight: 500;
     border-radius: 0.3vw;
     transition: all 0.2s ease-out;
     margin: 0 0.8vw;
     height: 5vw;
-    /* width: 4vw; */ 
 }
 
 .Button:hover
@@ -97,7 +96,7 @@ header
 {
     padding: 1vw;
     width: fit-content;
-    height: 5vw;
+    height: 3vw;
     font-size: 1vw;
     color: #fff;
     border: 1px solid white;
@@ -107,7 +106,27 @@ header
     display: flex;
     align-items: center;
     justify-content: center;
-    /* display: inline-block; */
+}
+
+.menu
+{
+    width: 40vw;
+    height: 60vw;
+    background-color: #003B95;
+    position: fixed;
+    top: 0;
+    right: 0;
+
+}
+
+.menuHeader
+{
+    width: 100%;
+    height: 8vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
 }
 
 @media (max-width: 768px)
@@ -132,9 +151,12 @@ header
 
     .subNav
     {
-        font-size: 2.5vw;
-        width: 100vw;
-        height: 3vw;
+        display: none;
+    }
+
+    .Button
+    {
+        padding: 1vw;
     }
 
     .logo
@@ -147,8 +169,4 @@ header
         font-size: 3vw;
     }
 
-    .navButton
-    {
-        font-size: 20px;
-    }
 }
