--- a/Styles/header.css
+++ b/Styles/header.css
@@ -108,15 +108,17 @@ header
     justify-content: center;
 }
 
-.menu
+.login
 {
-    width: 40vw;
-    height: 60vw;
-    background-color: #003B95;
-    position: fixed;
-    top: 0;
-    right: 0;
+    padding: 0.7vw;
+    transition: all 0.2s ease-out;
+    border-radius: 0.4vw;
+}
 
+.login:hover
+{
+    background-color: #ffffff57;
+    border-radius: 0.8vw;
 }
 
 .menuHeader
@@ -149,9 +151,27 @@ header
         margin: 0 0 2vw 0;
     }
 
+    .login
+    {
+        display: none;
+    }
+
     .subNav
     {
         display: none;
+    }
+
+    .subButton
+    {
+        border: 0.2vw solid black;
+        border-radius: 0.4vw;
+        transition: all 0.2s ease-out;
+    }
+
+    .subButton:hover
+    {
+        border-radius: 0.9vw;
+        background-color: #ffffff2c;
     }
 
     .Button
@@ -184,4 +204,13 @@ header
         scale: 1.08;
     }
 
+    .menu
+    {
+        width: 40vw;
+        height: 60vw;
+        background-color: #003B95;
+        position: fixed;
+        top: 0;
+        right: 0;
+    }
 }
